[package]
name = "lp586x"
version = "0.1.0"
edition = "2021"

authors = ["Markus Kasten <github@markuskasten.eu>"]
description = "LP586x matrix LED driver (supports LP5860, LP5861, LP5862, LP5864, LP5868)"
repository = "https://github.com/markus-k/lp586x-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
eh1_0 = ["dep:eh1_0"]

[dependencies]
embedded-hal = "0.2"
eh1_0 =  { package = "embedded-hal", version = "1.0.0-alpha.10", optional = true }

[dev-dependencies]
embedded-hal-mock = "0.9"
eh1_0-mock = { package = "embedded-hal-mock", git = "https://github.com/dbrgn/embedded-hal-mock.git", branch = "1-alpha" }